--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "axios": "^1.13.4",
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "json-server": "^1.0.0-beta.5",
     "vite": "^7.2.2"
   }
 }
